# pyta

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .travis.yml  Always_return_checker.py  CHANGELOG.md  CITATION.cff  DynamicExecutionChecker.py  IO_Function_checker.py  MANIFEST.in  PRIVACY_POLICY.md  README.md  checkers.py  comment_extractor.py  dynamic_execution_checker.py  ending_location_visitor.py  funcparserlib.py  global_variables_checker.py  investigation.md  nose.cfg  output.html  profile_test_examples.py  pylint-status.md  pyproject.toml  pyta.py  setendings.py  setup.cfg  setup.py  test-ui.sh  test-web-reporter.sh  test.py  test_checker.py  type_inference_visitor.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: publish.yml  test.yml
checkers/: IO_Function_checker.py  always_returning_checker.py  assigning_to_self_checker.py  forbidden_import_call_checker.py  forbidden_import_checker.py  global_variables_checker.py  invalid_range_index_checker.py
dhslim_test/: accepted.py  b6.py  correct_loop_indexing.py  double.py  even_index_sum.py  index_used_independently.py  lst_i_left_side.py  nested.py  other_error.py  output.html  rebinding.py  test.py  unused_index.py
docs/: conf.py  index.md
docs/cfg/: index.md
docs/checkers/: index.md
docs/contracts/: index.md
docs/debug/: index.md
docs/demos/: sample.py
docs/usage/: api.md  configuration.md  quick_start.md
docstring/: csc108_docstring.py  csc108_docstring_fpl.py
examples/: E9917_unnecessary_assignment_example.py  E9998_forbidden_io_function.py  README.md  always_returning_example.py  assigning_to_self_example.py  bad_loop_indexing_example.py  constant_test_example.py  contracts_demo.py  dynamic_execution_checker_example.py  dynamic_execution_example.py  example.py  for_target_subscript_example.py  forbidden_import_example.py  global_variables_example.py  global_variables_test.py  hello.py  invalid_range_index_example.py  one_iteration_example.py  output.html  pycodestyle_example.py  redundant_assignment_example.py  shadowing_in_comp_example.py  structure_test_example.py  top_level_global_test.py  type_annotation_example.py  type_inference_example.py  unnecessary_indexing_example.py
examples/custom_checkers/: E9999_forbidden_imports.py  c9103_invalid_name_checker.py  c9104_ModuleNameViolation.py  c9960_unmentioned_parameter.py  e9120_unnecessary_f-string_checker.py  e9920_unnecessary_f-string_checker.py  e9920_unnecessary_f_string.py  e9930_simplifiable_if.py  e9950_forbidden_python_syntax.py  e9951_incompatible_argument_type.py  e9955_union_attr_error.py  e9969_possibly_undefined.py  e9970_missing_param_type.py  e9971_missing_return_type.py  e9972_missing_attribute_type.py  e9973_missing_space_in_doctest.py  e9980_invalid_precondition_syntax.py  e9981_invalid_postcondition_syntax.py  e9982_invalid_representation_invariant_syntax.py  e9984_for_target_subscript.py  e9984_invalid_for_target.py  e9988_shadowing_in_comprehension.py  e9989_pep8_errors.py  e9989_pycodestyle.py  e9992_forbidden_top_level_code.py  e9992_top_level_code.py  e9993_invalid_range_index.py  e9994_unnecessary_indexing.py  e9995_type_is_assigned.py  e9996_one_iteration.py  e9997_forbidden_global_variables.py  e9998_forbidden_IO_function.py  e9999_forbidden_import.py  pyta_report.html  r9710_inconsistent_returns.py  r9711_missing_return_statement.py  r9711_missing_return_statements.py  r9900_redundant_condition.py  r9901_impossible_condition.py  w9501_infinite_loop.py
examples/ending_locations/: Arguments.py  Assert.py  Assign.py  AssignAttr.py  AssignName.py  AsyncFor.py  Attribute.py  BinOp.py  Binop.py  BoolOp.py  Call.py  Compare.py  Const.py  Decorators.py  DelAttr.py  Delete.py  Dict.py  DictComp.py  ExceptHandler.py  Expr.py  ExtSlice.py  For.py  FunctionDef.py  Global.py  If.py  ImportFrom.py  Index.py  Slice.py  Subscript.py  Tuple.py  UnaryOp.py  While.py  With.py  arguments.py  async_function_def.py  async_with.py  attribute.py  break.py  call.py  class_def.py  (+28 more)
examples/nodes/: README.md  ann_assign.py  arguments.py  assert.py  assign.py  assign_attr.py  assign_name.py  async_function_def.py  async_with.py  call.py  (+39 more)
nodes/: AnnAssign.py  Arguments.py  Assert.py  Assign.py  AssignAttr.py  AssignName.py  AsyncFor.py  AsyncFunctionDef.py  AsyncWith.py  Attribute.py  AugAssign.py  Await.py  BinOp.py  BoolOp.py  Break.py  Call.py  ClassDef.py  Compare.py  Comprehension.py  Const.py  Continue.py  Decorators.py  DelAttr.py  DelName.py  Delete.py  Dict.py  DictComp.py  Ellipsis.py  ExceptHandler.py  Expr.py  ExtSlice.py  For.py  FormattedValue.py  FunctionDef.py  GeneratorExp.py  Global.py  If.py  IfExp.py  Import.py  ImportFrom.py  (+91 more)
python_ta/: .pylintrc  __init__.py  __main__.py  allow_pylint_comments_false_testcase.py  allow_pylint_comments_true_testcase.py  script.py  testcase.py  upload.py  utils.py
python_ta.egg-info/: requires.txt
reporters/: color_reporter.py  html_reporter.py  plain_reporter.py  template.txt
sample_usage/: README.md  TODO.md  checker_draft.py  dataflow.py  draw_cfg.py  draw_tnodes.py  output.html  pretty_print.py  print_ast.py  print_nodes.py  print_table.py  pyta_stats.py  stats_analysis.py
scratch/: expected_error_msgs.py  monad.py
stats/: pyta_stats.py
tests/: conftest.py  custom_hypothesis_strategies.py  custom_hypothesis_support.py  print_ast_from_mod.py  test.pylintrc  test_black.py  test_check.py  test_check_all_contracts.py  test_check_invariants.py  test_class_contracts.py  test_constraints.py  test_contracts.py  test_contracts_attr_value_restoration.py  test_contracts_disable_contract_checking.py  test_contracts_type_alias_abstract_network.py  test_contracts_type_alias_abstract_ring.py  test_csc108_docstring.py  test_documented_classes_functions.py  test_dummy.py  test_examples.py  test_init_logging.py  test_init_version.py  test_main.py  test_messages_config.py  test_monad.py  test_setendings.py  test_subclass_contracts.py  test_validate_invariants.py  test_z3_visitor.py
website/: index.html  index.md
(+758 files in other folders)
