[project]
name = "python-ta"
description = "Code checking tool for teaching Python"
authors = [
    {name = "David Liu", email = "david@cs.toronto.edu"},
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "astroid ~= 2.15.4",
    "click >= 8.0.1, < 9",
    "colorama ~= 0.4.6",
    "jinja2 ~= 3.1.2",
    "pycodestyle ~= 2.11",
    "pygments >= 2.14,< 2.17",
    "pylint ~= 2.17.4",
    "requests >= 2.28,< 2.32",
    "six",
    "tabulate ~= 0.9.0",
    "toml ~= 0.10.2",
    "typeguard >= 4.1.0, < 5",
    "wrapt >= 1.15.0, < 2",
]
dynamic = ["version"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "hypothesis",
    "inflection",
    "myst-parser",
    "pre-commit",
    "pytest",
    "pytest-snapshot",
    "pytest-cov >= 4.0,< 4.2",
    "sphinx",
    "sphinx-rtd-theme",
]
cfg = [
    "graphviz",
]
z3 = [
    "z3-solver",
]

[project.scripts]
python_ta = "python_ta.__main__:main"

[project.urls]
Homepage = "https://github.com/pyta-uoft/pyta"
Documentation = "https://www.cs.toronto.edu/~david/pyta/"
Repository = "https://github.com/pyta-uoft/pyta.git"
Changelog = "https://github.com/pyta-uoft/pyta/blob/master/CHANGELOG.md"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "python_ta.__version__"}
#readme = {file = "README.md", content-type = "text/markdown"}

[tool.black]
extend-exclude = '''
^/examples/
'''
line-length = 100
target-version = ['py38']


[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --ignore=tests/test_type_constraints --ignore=tests/test_type_inference"
testpaths = [
    "tests",
]
