[project]
name = "python-ta-workspace"
version = "0.1.0"
description = "A workspace for PythonTA packages"
requires-python = ">=3.10"

# Global dependencies that apply to all packages (e.g., testing/linting)
dependencies = [
    "python-ta[dev,z3,cfg]",
    "python-ta-z3",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"


[tool.uv.sources]
python-ta = { workspace = true }
python-ta-z3 = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]


[tool.black]
extend-exclude = '''
^/examples/
^/packages/python-ta/tests/fixtures/
'''
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']


[tool.isort]
profile = "black"
known_local_folder = ["python_ta"]
multi_line_output = 3
