[metadata]
name = python-ta
version = attr: python_ta.__version__
description = Code checking tool for teaching Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyta-uoft/pyta
author = David Liu
author_email = david@cs.toronto.edu
license = MIT

[options]
install_requires =
    astroid ~= 2.12.13
    pycodestyle
    pylint ~= 2.15.8
    tabulate~=0.8.9
    colorama
    six
    jinja2
    pygments
    wrapt >= 1.14.1
    typeguard >= 2.13.2, < 3
    requests
    click >= 8.0.1
    toml
packages = find:
python_requires = ~=3.8
zip_safe = False
include_package_data = True

[options.extras_require]
dev =
    graphviz
    hypothesis
    inflection
    myst-parser
    pre-commit
    pytest
    pytest-cov
    sphinx
    sphinx-rtd-theme
z3 =
    z3-solver

[options.entry_points]
console_scripts =
    python_ta = python_ta.__main__:main
