[metadata]
name = python-ta
version = attr: python_ta.__version__
description = Code checking tool for teaching Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyta-uoft/pyta
author = David Liu
author_email = david@cs.toronto.edu
license = MIT

[options]
install_requires =
    astroid ~= 2.15.4
    pycodestyle ~= 2.10.0
    pylint ~= 2.17.4
    tabulate ~= 0.9.0
    colorama ~= 0.4.6
    six
    jinja2 ~= 3.1.2
    pygments ~= 2.14.0
    wrapt >= 1.15.0, < 2
    typeguard >= 2.13.3, < 3
    requests ~= 2.28.0
    click >= 8.0.1, < 9
    toml ~= 0.10.2
packages = find:
python_requires = ~=3.8
zip_safe = False
include_package_data = True

[options.extras_require]
dev =
    graphviz
    hypothesis
    inflection
    myst-parser
    pre-commit
    pytest
    pytest-cov
    sphinx
    sphinx-rtd-theme
z3 =
    z3-solver

[options.entry_points]
console_scripts =
    python_ta = python_ta.__main__:main
